Update PostItemPinned.css : Fix Title Overflow Error

--- a/src/layout/PostItemPinned.css
+++ b/src/layout/PostItemPinned.css
@@ -74,7 +74,7 @@ a{
     }
 
     #postPinnedInfoTitle{
-        width: 200px;
+        width: 400px;
     
         margin-top: -5px;
     }
